Reserve Java rehydration capacity without blocking descendant processing